# jimp

./: README.md
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.h
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: CMakeLists.txt  SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/geometry/: Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  (+1 more)
lab7/arrayfill/: ArrayFill.cpp  ArrayFill.h  CMakeLists.txt  Filler.cpp  Filler.h  IncrementalFill.cpp  IncrementalFill.h  RandomFill.cpp  RandomFill.h  SquaredFill.cpp  SquaredFill.h  UniformFill.cpp  UniformFill.h  main.cpp
lab8/: CMakeLists.txt
(+32 files in other folders)
